# HACKATHON-II-Todo-App-PHASE_2

./: README.md
phase-1/: .gitignore  (+1 more)
phase-2/: .gitignore  CLAUDE.md  GEMINI.md  pyproject.toml
phase-2/.specify/memory/: constitution.md
phase-2/.specify/templates/: agent-file-template.md
phase-2/backend/: debug_auth.py  requirements.txt  reset_auth_db.py
phase-2/backend/src/: db.py  main.py
phase-2/backend/src/auth/: dependencies.py
phase-2/backend/src/models/: task.py
phase-2/backend/src/services/: task_service.py
phase-2/backend/tests/: manual_auth_check.py  manual_create_task.py  manual_delete_task.py
phase-2/frontend/: next.config.js  package-lock.json  package.json
phase-2/frontend/src/components/: task-form.tsx  task-list.tsx
phase-2/frontend/src/lib/: api-client.ts
phase-2/history/prompts/authentication/: 001-specify-authentication.spec.prompt.md  002-plan-authentication.plan.prompt.md  (+3 more)
phase-2/specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  tasks.md
phase-2/specs/002-phase-2-overview/: spec.md
phase-2/specs/003-task-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-2/specs/004-authentication/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-2/specs/005-rest-api-endpoints/: spec.md
phase-2/specs/006-database-schema/: spec.md
phase-2/specs/007-frontend-ui/: spec.md
phase-2/src/cli/: commands.py
phase-2/src/models/: task.py
phase-2/src/services/: task_service.py
phase-2/tests/integration/: test_cli.py
phase-2/tests/unit/: test_models.py
(+104 files in other folders)
